nav bar injection approach

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ body {
 }
 
 header {
-  font-family: var(--font-main);
+  font-family: var(--font-header);
 }
 
 .header-banner {
@@ -60,29 +60,32 @@ h1 {
   margin: 0.2em 0;
 }
 
-p {
-  font-size: 1em;
-  opacity: 0.75;
-  margin: 0.2em 0;
-}
-
 .tagline {
-  font-style: italic;
-  font-size: 0.95em;
+  font-size: var(--font-size-lg);
   color: var(--color-text-accent-secondary);
   margin-top: 1em;
 }
 
 main {
   background-color: var(--color-surface);
-  color: var(--color-text-primary);
+  /* color: var(--color-text-primary);
   text-align: left;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   min-height: calc(100vh - 80px);
-  padding: 2rem 12rem;
+  padding: 2rem 12rem; */
+}
+
+.article-intro{
+  display: flex;
+  flex-direction: column;
+  padding: var(--spacing-sm) var(--spacing-lg) ;
+  background-color: var(--color-surface);
+  color:var(--color-text-primary);
+  font-family: var(--font-main);
+  font-size: var(--font-size-base);
 }
 
 footer {
