--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -25,9 +25,9 @@ nav {
     margin: 0;
     padding: 1rem 4rem;
     z-index: 1000;
-    box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.50);
+    box-shadow: 0 12px 17px 4px var(--color-shadow);
     box-sizing: border-box;
-    border-bottom: 1.5px solid var(--primary-dark);
+    border-bottom: 1.75px solid var(--color-primary-dark);
     transition: transform 0.3s ease;
 }
 
