--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -15,7 +15,7 @@
   --color-text-primary: #F5F5F5;
   --color-text-muted: #BFAFAF;
   --color-text-accent: #FFDADA;
-  --color-text-accent-secondary: #ff914d;
+  --color-text-accent-secondary: #fddc24;
   --color-footer-text: #acacac;
 
   /* State Colors */
@@ -23,9 +23,10 @@
   --color-warning: #D96B6B;
 
   /* Typography */
-  --font-main: 'Courier New', monospace;
-  --font-nav: 'Lato', 'Courier New', monospace;
-  --font-size-base: 1em;
+  --font-main: 'Arial', monospace;
+  --font-header: 'Courier New', monospace;
+  --font-nav: 'Lato', monospace;
+  --font-size-base: 1.2em;
   --font-size-lg: 1.4em;
   --font-size-xl: 2.2em;
   --font-size-footer: 0.85em;
