--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,8 @@
+@import url(/assets/css/mobile.css);
+@import url(/assets/css/variables.css);
+
 body {
   background-color: var(--color-bg);
-  color: var(--text-primary);
   margin: 0;
 }
 
@@ -14,9 +16,9 @@ body {
   align-items: center;
   justify-content: center;
   text-align: center;
-  padding:  0 2%;
+  padding: 0 2%;
   gap: 20px;
-
+  font-size: var(--font-size-xxl);
 }
 
 img {
@@ -24,8 +26,36 @@ img {
   height: 64px;
 }
 
+h1,
+h2,
+h3,
+p {
+  font-family: var(--font-main);
+  color: var(--color-text-primary);
+}
+
 h1 {
+  font-size: var(--font-size-xxl);
+  line-height: 1.2;
+}
+
+h2 {
   font-size: var(--font-size-xl);
+  line-height: 1.3;
+}
+
+h3 {
+  font-size: var(--font-size-lg);
+  line-height: 1.4;
+}
+
+p,
+li {
+  font-size: var(--font-size-base);
+}
+
+.header-content {
+  font-size: var(--font-size-base);
 }
 
 .tagline {
@@ -38,47 +68,57 @@ main {
   background-color: var(--color-surface);
 }
 
-.article-intro{
+.article-intro {
   display: flex;
   flex-direction: column;
   margin: auto var(--margin-horizontal-main);
   background-color: var(--color-surface);
-  color:var(--color-text-primary);
+  color: var(--color-text-primary);
+  /* font-size: var(--font-size-base); */
   font-family: var(--font-main);
-  font-size: var(--font-size-base);
+}
+
+.sectioned-left {
+  display: flex;
+  flex-direction: column;
+  margin: auto var(--margin-horizontal-main);
+  background-color: var(--color-surface);
+  border: none;
+  border-top: 2px solid var(--color-primary-dark);
+  text-align: left;
 }
 
 footer {
   background-color: var(--color-bg);
   color: var(--color-text-primary);
   font-family: var(--font-main);
-  font-size: var(--font-size-sm);
   width: 100%;
   text-align: center;
-  margin-top: auto; 
+  margin-top: auto;
   padding: 4rem 0;
+  text-decoration: none;
+  font-size: var(--font-size-sm);
+}
+
+/* why this wont work on footer? */
+footer p{
+   font-size: var(--font-size-sm);
+}
+
+footer a {
+  color: var(--color-text-primary);
+  transition: var(--transition-text);
+}
+
+
+footer a:hover,
+footer a:focus,
+footer a:active {
+  color: var(--color-text-accent-secondary);
 }
 
 *,
 *::before,
 *::after {
   box-sizing: border-box;
-}
-
-@media (max-width: 768px) {
-  /* nav {
-    padding: 0.5rem 1rem;
-    height: auto;
-  }
-  .header-banner {
-    min-height: 180px;
-    padding: 0 5px;
-  }
-  .logo {
-    padding: 0.5rem 1rem;
-    font-size: 1em;
-  }
-  .logo span {
-    font-size: 1.2em;
-  } */
 }
