--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -27,10 +27,11 @@
    --font-nav: 'Lato', Arial, sans-serif;
    --font-main: 'Inter', sans-serif, monospace;
    --font-banner: 'Courier New', sans-serif, monospace;
-   --font-size-sm: 0.95em;
-   --font-size-base: 1.2em;
-   --font-size-lg: 1.4em;
-   --font-size-xl: 2.2em;
+   --font-size-sm: 0.9rem;
+   --font-size-base: 1.2rem;
+   --font-size-lg: 1.5rem;
+   --font-size-xl: 1.8rem;
+   --font-size-xxl: 2.8rem;
    --font-weight-regular: 400;
    --font-weight-medium: 500;
    --font-weight-semibold: 600;
@@ -41,14 +42,18 @@
    --spacing-xs: 0.25em;
    --spacing-sm: 0.5em;
    --spacing-md: 1em;
-   --spacing-lg: 2em;;
+   --spacing-lg: 2em;
+   ;
    --spacing-xl: 4em;
 
    /*Radius*/
-   --radius-sm:2.5%;
+   --radius-sm: 2.5%;
 
    /* Layout */
    --nav-height: 5.7em;
-   --header-banner-size:21rem;
-  
+   --header-banner-size: 21rem;
+
+   /* Transitions */
+   --transition-nav: 0.3s ease;
+   --transition-text: 0.3s ease;
  }
