--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -1,4 +1,5 @@
  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
  :root {
    /* Brand Colors */
@@ -25,10 +26,10 @@
 
    /* Typography */
    --font-nav: 'Lato', Arial, sans-serif;
-   --font-main: 'Inter', sans-serif, monospace;
+   --font-main: 'Roboto', sans-serif, monospace;
    --font-banner: 'Courier New', sans-serif, monospace;
    --font-size-sm: 1.0rem;
-   --font-size-base: 1.2rem;
+   --font-size-base: 1.3rem;
    --font-size-lg: 1.5rem;
    --font-size-xl: 1.8rem;
    --font-size-xxl: 2.8rem;
@@ -40,8 +41,8 @@
    /* Spacing */
    --margin-horizontal-main: 3.7%;
    --margin-horizontal-content: 13%;
-   --container-padding:0.5% 13%;
-   --border-size:0.12rem;
+   --container-padding: 0.5% 13%;
+   --border-size: 0.12rem;
 
    --spacing-xs: 0.25em;
    --spacing-sm: 0.5em;
