--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -1,3 +1,8 @@
+/* 
+  © 2025 datsforge 
+  Proprietary – See LICENSE for details. 
+*/
+
 @import url(/assets/css/variables.css);
 
 /* Logo styles */
