testing new icon and added banner image

--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -6,9 +6,8 @@
 @media (max-width: 768px) {
   .header-banner {
     flex-direction: column;
-    gap: 10px;
-    min-height: 260px;
-    padding: 1rem 0.5rem;
+    height: var(--header-banner-size-mobile);
+    min-height: var(--header-banner-size-mobile);
     text-align: center;
   }
 
