--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -5,6 +5,9 @@
 
  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
  @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
 
  :root {
    /* Brand Colors */
@@ -32,7 +35,7 @@
    /* Typography */
    --font-nav: 'Lato', Arial, sans-serif;
    --font-main: 'Roboto', sans-serif, monospace;
-   --font-banner: 'Courier New', sans-serif, monospace;
+   --font-banner: 'Courier Prime', sans-serif, monospace;
    --font-size-sm: 1.0rem;
    --font-size-base: 1.3rem;
    --font-size-lg: 1.5rem;
@@ -60,7 +63,8 @@
 
    /* Layout */
    --nav-height: 5.7em;
-   --header-banner-size: 21rem;
+   --header-banner-size: 27rem;
+   --header-banner-size-mobile: 17rem;
 
    /* Transitions */
    --transition-nav: 0.3s ease;
