--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -50,6 +50,24 @@
     border-top-width: 1px;
   }
 
+  .mockup_left_aligned,.mockup_right_aligned {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    gap:0.5rem;
+    max-height: unset;
+    border-bottom: var(--border-size) solid var(--color-border);
+    text-align:left;
+  }
+
+  .mockup_left_aligned p {
+    order: 2;
+  }
+
+  .mockup_left_aligned img {
+    order: 1;
+  }
+
   img.logo {
     width: 40px;
     height: 40px;
