--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -11,7 +11,6 @@
     text-align: center;
   }
 
-
   /* Typography */
   h1 {
     font-size: var(--font-size-xl);
@@ -31,10 +30,24 @@
     font-size: var(--font-size-sm);
   }
 
+  .slogan {
+    padding: 0;
+  }
 
-  .tagline {
-    font-size: 1rem;
-    margin-top: 0.5em;
+  .slogan h1 {
+    margin: 0 0 2rem 0;
+    text-align: center;
+    font-size: var(--font-size-xl);
+    font-family: var(--font-banner);
+    line-height: 1.4;
+  }
+
+  .slogan p {
+    margin: 0;
+    text-align: left;
+    color: var(--color-text-accent-secondary);
+    font-size: var(--font-size-l);
+    font-family: var(--font-banner);
   }
 
   .container {
@@ -50,14 +63,24 @@
     border-top-width: 1px;
   }
 
-  .mockup_left_aligned,.mockup_right_aligned {
+  .mockup_left_aligned,
+  .mockup_right_aligned {
     display: flex;
     flex-direction: column;
     padding: 1rem;
-    gap:0.5rem;
+    gap: 0.5rem;
     max-height: unset;
     border-bottom: var(--border-size) solid var(--color-border);
-    text-align:left;
+    text-align: left;
+  }
+
+  .mockup_left_aligned img,
+  .mockup_right_aligned img {
+    max-width: 70vw;
+    max-height: 140vh;
+    height: auto;
+    object-fit: contain;
+    align-self: center;
   }
 
   .mockup_left_aligned p {
@@ -115,30 +138,39 @@
     font-size: var(--font-size-base);
   }
 
-
   .nav-links {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    gap: unset;
+
     position: absolute;
     top: 100%;
     left: 0;
     width: 100%;
+    z-index: 9999;
+
     background: var(--color-primary-dark);
-    padding: var(--spacing-lg) 0;
     margin: 0;
-    max-height: 0;
+    padding: var(--spacing-xs) 0;
     overflow: hidden;
-    opacity: 0;
-    gap: var(--spacing-sm);
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
-    z-index: 1099;
+    border-radius: 0 0 var(--radius-xs) var(--radius-xs);
+
     pointer-events: none;
+    max-height: 0;
+    opacity: 0;
     transform: translateY(-10px);
     transition:
       max-height 0.4s cubic-bezier(0.4, 0, 0.2, 1),
       opacity 0.3s,
       transform 0.3s;
+  }
 
+  .nav-links li {
+    margin: 0;
+    text-align: center;
+    padding: var(--spacing-xs) 0;
   }
 
   .menu-toggle:checked+.menu-icon+.nav-links {
@@ -146,10 +178,5 @@
     opacity: 1;
     pointer-events: auto;
     transform: translateY(0);
-  }
-
-  .nav-links li {
-    text-align: center;
-    padding: var(--spacing-md) 0;
   }
 }
