--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -45,7 +45,7 @@
   .slogan p {
     margin: 0;
     text-align: left;
-    color: var(--color-text-accent-secondary);
+    color: var(--color-text-accent);
     font-size: var(--font-size-l);
     font-family: var(--font-banner);
   }
@@ -83,7 +83,19 @@
     align-self: center;
   }
 
-  .mockup_left_aligned p {
+  .mockup_left_aligned .mockup_descriptions,
+  .mockup_right_aligned .mockup_descriptions {
+    align-items: flex-start;
+  }
+
+  .mockup_left_aligned .link-with-icon-group,
+  .mockup_right_aligned .link-with-icon-group {
+    flex-direction: column;
+    gap: 0.5rem;
+    align-items: start;
+  }
+
+  .mockup_descriptions {
     order: 2;
   }
 
